add proposal backend logic
